# picachu-color-service

./: .gitignore  Dockerfile  Makefile  README.md  application.py  config.py  docker-compose.yml  pyproject.toml
basic_model_binding/: message_packer.py  messages_traffic_controller.py
colors_model/: logic.py
core/: model_base.py
domain/associations/: associations.py
domain/data_access_layer/: build_connection_string.py  db.py  engine.py  session.py
domain/emotions/: emotion.py
domain/objects/: object.py
domain/photo_association/: photo_association.py
domain/photo_color/: photo_color.py
domain/photo_emotion/: photo_emotion.py
domain/photo_object/: photo_object.py
model/: color_model.py  model_result_schema.py
