[tool.poetry]
name = "Color-model"
version = "0.1.0"
description = ""
authors = [
    "... <...>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.9"
pydantic = "^1.10.4"
boto3 = "^1.21.42"
boto3-stubs-lite = "^1.26.8"
opencv-python-headless = "^4.6.0.66"
pillow = "^9.3.0"
scikit-learn = "^1.1.3"
pika = "^1.3.1"
imageio = "^2.24.0"
